# ChangeLog for media-libs/phonon-vlc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/phonon-vlc/ChangeLog,v 1.21 2012/06/15 08:09:46 ago Exp $

  15 Jun 2012; Agostino Sarubbo <ago@gentoo.org> phonon-vlc-0.4.1.ebuild:
  stable for amd64/x86, wrt to bug #401301

  15 Jun 2012; Michael Weber <xmw@gentoo.org> phonon-vlc-0.4.1.ebuild,
  phonon-vlc-0.5.0.ebuild:
  ppc stable (bug 401301)

  29 May 2012; Alexis Ballier <aballier@gentoo.org> phonon-vlc-0.5.0.ebuild,
  phonon-vlc-9999.ebuild:
  keyword ~amd64-fbsd

  04 May 2012; Johannes Huber <johu@gentoo.org> phonon-vlc-0.4.0.ebuild,
  phonon-vlc-0.4.1.ebuild, phonon-vlc-0.5.0.ebuild, phonon-vlc-9999.ebuild:
  Migrate to virtual/pkgconfig.

*phonon-vlc-0.5.0 (16 Feb 2012)

  16 Feb 2012; Johannes Huber <johu@gentoo.org> +phonon-vlc-0.5.0.ebuild,
  phonon-vlc-9999.ebuild:
  Version bump.

  10 Jan 2012; Brent Baude <ranger@gentoo.org> phonon-vlc-0.4.0.ebuild:
  Marking phonon-vlc-0.4.0 ppc for bug 396359

  06 Jan 2012; Johannes Huber <johu@gentoo.org> phonon-vlc-9999.ebuild:
  Update deps for live wrt bug #397911.

  24 Dec 2011; Johannes Huber <johu@gentoo.org> phonon-vlc-0.4.0.ebuild,
  phonon-vlc-0.4.1.ebuild:
  Restrict dep range for media-libs/phonon to 2.5, fix bug #395885.

  20 Oct 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  phonon-vlc-0.4.0.ebuild, phonon-vlc-0.4.1.ebuild, phonon-vlc-9999.ebuild:
  QA: remove reference to USE flag that is no longer present.

  02 Oct 2011; Maciej Mrozowski <reavertm@gentoo.org> phonon-vlc-0.4.0.ebuild,
  phonon-vlc-0.4.1.ebuild, phonon-vlc-9999.ebuild:
  Remove v4l dependencies (support is optional and determined runtime). Bug
  385243.

  02 Sep 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -phonon-vlc-0.3.2.ebuild:
  Remove old

  07 Aug 2011; Markus Meier <maekke@gentoo.org> phonon-vlc-0.4.0.ebuild:
  x86 stable, bug #371187

*phonon-vlc-0.4.1 (01 Aug 2011)
