@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/phonon-vlc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/phonon-vlc/ChangeLog,v 1.21 2012/06/15 08:09:46 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/phonon-vlc/ChangeLog,v 1.22 2012/06/15 08:13:18 johu Exp $
+
+  15 Jun 2012; Johannes Huber <johu@gentoo.org> -phonon-vlc-0.4.0.ebuild:
+  Remove old.
 
   15 Jun 2012; Agostino Sarubbo <ago@gentoo.org> phonon-vlc-0.4.1.ebuild:
   stable for amd64/x86, wrt to bug #401301
